# GraphColoring

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GraphColoring  GraphColoring.cbp  InputGood.txt  Makefile  Results_First_Solution.txt  Results_Optimal_Solution.txt  cmake_install.cmake  input.txt  main.cpp
Construction Heuristic/: Dsatur.cpp  Dsatur.h
FileReader/: FileReader.cpp  FileReader.h
Graph/: Graph.cpp  Graph.h
Node/: Node.cpp  Node.h
PermutationHeuristic/: AttemptHeuristic.cpp  AttemptHeuristic.h  ColorClassHeuristic.cpp  ColorClassHeuristic.h  ColorTestHeuristic.cpp  ColorTestHeuristic.h
